UI & UX + Customized Scroll Bar For Chrome. + Dynamic Padding For All Content Wrappers. + Product Page Initial Layout. +- Current Currency Structure.

--- a/source/src/css/common.css
+++ b/source/src/css/common.css
@@ -29,6 +29,30 @@ button{
 
 }
 
+/***************** Scrollbar START */
+/* width */
+::-webkit-scrollbar{
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track{
+  background: #ffffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb{
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover{
+  background: #555;
+}
+/***************** Scrollbar END */
+
+
 /***************** Fonts START */
 /* Raleway */
 @font-face{
