--- a/source/src/css/master.css
+++ b/source/src/css/master.css
@@ -235,13 +235,18 @@ body > div#root > cover-element.active{
 
 }
 
+/* Adding Padding & min-height To Every Content Wrapper */
+body > div#root > :last-child{
+  padding-top: calc(var(--padding) * 4);
+  padding-right: calc(var(--padding) * 4);
+  padding-left: calc(var(--padding) * 4);
+
+}
 
 body > div#root > :where(products-all, products-tech, products-clothes){
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
   grid-gap: var(--gap);
-
-  padding: calc(var(--padding) * 4);
 
 }
 body > div#root > :where(products-all, products-tech, products-clothes) > :first-child{
@@ -296,5 +301,45 @@ body > div#root > :where(products-all, products-tech, products-clothes) > a > b{
   /* Disbalance On Price Numbers Come From Font Family "Raleway" */
   /* For Manual Design Use <sup /> */
   /* font-family: none; */
+
+}
+
+
+body > div#root > product-full{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+
+
+}
+
+body > div#root > product-full > gallery-big{
+  display: grid;
+  grid-template-columns: 100px 2fr;
+  grid-gap: var(--gap);
+
+}
+
+body > div#root > product-full > gallery-big > aside{
+  max-height: 70vh;
+  overflow-y: scroll;
+  overflow-x: clip;
+
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+
+}
+body > div#root > product-full > gallery-big > aside > img{
+  height: 100px;
+  width: 100px;
+  object-fit: contain;
+
+}
+
+body > div#root > product-full > gallery-big > img{
+  height: 100%;
+  width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
 
 }
